--- a/.github/workflow/test.yml
+++ b/.github/workflow/test.yml
@@ -1,36 +1,31 @@
-name: Run Tests
+name: Automation Tests
 
 on:
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
+  workflow_dispatch: # Untuk manual trigger
+  pull_request:     # Otomatis berjalan saat ada PR ke main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Java
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '21'
+          java-version: '17'
 
-      - name: Setup Chrome
-        uses: browser-actions/setup-chrome@v1
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v3
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew
 
       - name: Run API Tests
-        run: ./gradlew test -Dcucumber.filter.tags="@api"
+        run: ./gradlew cucumberTest -Ptags="@api"
 
       - name: Run Web UI Tests
-        run: ./gradlew test -Dcucumber.filter.tags="@web"
+        run: ./gradlew cucumberTest -Ptags="@web"
 
       - name: Upload Test Reports
         uses: actions/upload-artifact@v4
