--- a/.github/workflow/test.yml
+++ b/.github/workflow/test.yml
@@ -1,8 +1,13 @@
-name: Automation Tests
+name: Run Tests
 
 on:
-  workflow_dispatch: # Untuk manual trigger
-  pull_request:     # Otomatis berjalan saat ada PR ke main
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch: # Manual trigger
 
 jobs:
   test:
@@ -10,25 +15,16 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
           java-version: '17'
+          distribution: 'temurin'
 
       - name: Grant execute permission for Gradle
         run: chmod +x gradlew
 
-      - name: Run API Tests
-        run: ./gradlew cucumberTest -Ptags="@api"
-
-      - name: Run Web UI Tests
-        run: ./gradlew cucumberTest -Ptags="@web"
-
-      - name: Upload Test Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-reports
-          path: build/reports/cucumber/
+      - name: Run Tests
+        run: ./gradlew test
