Initial commit: update lagi web and API automation framework

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,19 +21,10 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Install Chrome
+      - name: Install Google Chrome
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
-
-      - name: Install ChromeDriver
-        run: |
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-          sudo apt-get install -yqq unzip
-          LATEST=$(curl -sSL https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)
-          wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/${LATEST}/chromedriver_linux64.zip
-          unzip /tmp/chromedriver.zip -d /usr/local/bin/
-          chmod +x /usr/local/bin/chromedriver
 
       - name: Grant permission to execute gradlew
         run: chmod +x ./gradlew
