--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,22 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Install ChromeDriver
+      - name: Install Google Chrome
         run: |
-            DRIVER_VERSION=$(curl -sS "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
-            echo "ChromeDriver Version (Latest Stable): $DRIVER_VERSION"
-            wget "https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip"
-            unzip chromedriver_linux64.zip
-            sudo mv chromedriver /usr/local/bin/
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+          DRIVER_VERSION=$(curl -sS "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
+          echo "ChromeDriver Version (Latest Stable): $DRIVER_VERSION"
+          wget "https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip"
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+
+      - name: Verify ChromeDriver Permissions
+        run: |
+          ls -l /usr/local/bin/chromedriver
 
       - name: Grant permission to execute gradlew
         run: chmod +x ./gradlew
 
-      - name: Run Tests
-        run: ./gradlew test -Dwebdriver.chrome.driver=/usr/local/bin/chromedriver -Dchromeoptions.args="--headless --no-sandbox"
+      - name: Run Tests (Without Headless)
+        run: ./gradlew test -Dwebdriver.chrome.driver=/usr/local/bin/chromedriver
