Initial commit: update lagi-13 web and API automation framework

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,22 +21,21 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Install Google Chrome dan ChromeDriver versi stabil
+      - name: Install Google Chrome versi 114
         run: |
-            # Update dan install Google Chrome versi stabil terbaru
-            sudo apt-get update
-            sudo apt-get install -y google-chrome-stable
+            # Tambahkan repo Google untuk mendapatkan Chrome versi 114
+            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+            sudo apt install -y ./google-chrome-stable_current_amd64.deb
         
             # Cek versi Chrome yang diinstal
             google-chrome --version
         
-            # Install versi Chromedriver yang sesuai dengan Chrome versi 114
-            CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+            # Install ChromeDriver versi 114
+            CHROME_VERSION="114.0.5735.133"
             wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip
             unzip chromedriver_linux64.zip
             sudo mv chromedriver /usr/local/bin/
             sudo chmod +x /usr/local/bin/chromedriver
-        
         
 
       - name: Grant permission to execute gradlew
