Initial commit: update lagi-14 web and API automation framework

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,21 +21,31 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Install Google Chrome versi 114
+      - name: Install Dependencies (jq, Chrome, ChromeDriver)
         run: |
-            # Tambahkan repo Google untuk mendapatkan Chrome versi 114
-            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-            sudo apt install -y ./google-chrome-stable_current_amd64.deb
-        
-            # Cek versi Chrome yang diinstal
-            google-chrome --version
-        
-            # Install ChromeDriver versi 114
-            CHROME_VERSION="114.0.5735.133"
-            wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip
-            unzip chromedriver_linux64.zip
-            sudo mv chromedriver /usr/local/bin/
-            sudo chmod +x /usr/local/bin/chromedriver
+            sudo apt-get update
+            sudo apt-get install -y jq google-chrome-stable
+            
+            # Ambil URL ChromeDriver yang cocok dengan Chrome
+            API_URL="https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json"
+            CHROMEDRIVER_URL=$(curl -sS $API_URL | jq -r '.versions[-1].downloads.chromedriver[] | select(.platform=="linux64") | .url')
+  
+            if [ -z "$CHROMEDRIVER_URL" ]; then
+              echo "Error: No matching ChromeDriver found!"
+              exit 1
+            fi
+  
+            echo "Downloading ChromeDriver from: $CHROMEDRIVER_URL"
+            curl -Lo chromedriver.zip "$CHROMEDRIVER_URL"
+            unzip chromedriver.zip
+            sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
+            rm -rf chromedriver.zip chromedriver-linux64
+  
+      - name: Debug Chrome & ChromeDriver Version
+        run: |
+              echo "Checking installed versions..."
+              google-chrome --version
+              chromedriver --version
         
 
       - name: Grant permission to execute gradlew
