--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,35 +21,33 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Install Dependencies (jq, Chrome, ChromeDriver)
+      - name: Install Chrome & ChromeDriver (matching version)
         run: |
-            sudo apt-get update
-            sudo apt-get install -y jq google-chrome-stable
-            
-            # Ambil URL ChromeDriver yang cocok dengan Chrome
-            API_URL="https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json"
-            CHROMEDRIVER_URL=$(curl -sS $API_URL | jq -r '.versions[-1].downloads.chromedriver[] | select(.platform=="linux64") | .url')
-  
-            if [ -z "$CHROMEDRIVER_URL" ]; then
-              echo "Error: No matching ChromeDriver found!"
-              exit 1
-            fi
-  
-            echo "Downloading ChromeDriver from: $CHROMEDRIVER_URL"
-            curl -Lo chromedriver.zip "$CHROMEDRIVER_URL"
-            unzip chromedriver.zip
-            sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
-            rm -rf chromedriver.zip chromedriver-linux64
-  
+          sudo apt-get update
+          sudo apt-get install -y wget unzip jq
+
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          echo "Installed Chrome version: $CHROME_VERSION"
+
+          DRIVER_URL=$(curl -sS https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json \
+            | jq -r '.channels.Stable.downloads.chromedriver[] | select(.platform=="linux64") | .url')
+
+          echo "Downloading ChromeDriver from: $DRIVER_URL"
+          curl -Lo chromedriver.zip "$DRIVER_URL"
+          unzip chromedriver.zip
+          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
+          chmod +x /usr/local/bin/chromedriver
+
       - name: Debug Chrome & ChromeDriver Version
         run: |
-              echo "Checking installed versions..."
-              google-chrome --version
-              chromedriver --version
-        
+          google-chrome --version
+          chromedriver --version
 
       - name: Grant permission to execute gradlew
         run: chmod +x ./gradlew
 
       - name: Run Tests
-        run: ./gradlew test -Dchromeoptions.args="--headless --no-sandbox"
+        run: ./gradlew test
