--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     //testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
-    testImplementation "org.seleniumhq.selenium:selenium-devtools-v135:4.11.0" // Tambahkan baris ini
+    //testImplementation "org.seleniumhq.selenium:selenium-devtools-v135:4.11.0" 
+    // Tambahkan baris ini
 
     // RestAssured untuk API Testing
     testImplementation 'io.rest-assured:rest-assured:5.3.0'
