--- a/build.gradle
+++ b/build.gradle
@@ -15,19 +15,16 @@ dependencies {
     // JUnit 5 dan JUnit Platform Suite
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     testImplementation 'org.junit.platform:junit-platform-suite:1.10.0'
-    testImplementation 'org.junit.platform:junit-platform-suite-engine:1.10.0' // Tambahkan ini
+    testImplementation 'org.junit.platform:junit-platform-suite-engine:1.10.0'
 
     // Cucumber
     testImplementation 'io.cucumber:cucumber-java:7.14.0'
     testImplementation 'io.cucumber:cucumber-junit:7.14.0'
     testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.14.0'
-    //testImplementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
+
     // Selenium untuk Web UI Testing
-    //testImplementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
-    //testImplementation "org.seleniumhq.selenium:selenium-devtools-v135:4.11.0" 
-    // Tambahkan baris ini
 
     // RestAssured untuk API Testing
     testImplementation 'io.rest-assured:rest-assured:5.3.0'
@@ -41,14 +38,8 @@ dependencies {
 
     // JSON Processing
     testImplementation 'org.json:json:20210307'
-    //testImplementation 'com.google.code.gson:gson:2.8.9'
     testImplementation 'com.google.code.gson:gson:2.10.1'
-
-    testImplementation 'io.rest-assured:rest-assured:5.3.0'
-    testImplementation 'io.rest-assured:json-path:5.3.0'
-    testImplementation 'io.rest-assured:xml-path:5.3.0'
 }
-
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
@@ -75,4 +66,3 @@ tasks.register('webTest', Test) {
     testClassesDirs = sourceSets.test.output.classesDirs
     classpath = sourceSets.test.runtimeClasspath
 }
-
