--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,37 +21,34 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Install Chrome and matching ChromeDriver
+      - name: Install Chrome & ChromeDriver (exact version match)
         run: |
-            sudo apt-get update
-            sudo apt-get install -y wget gnupg unzip jq
-        
-            # Tambah repo resmi Google Chrome
-            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo gpg --dearmor -o /usr/share/keyrings/google-chrome.gpg
-            echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/google-chrome.gpg] http://dl.google.com/linux/chrome/deb/ stable main' | sudo tee /etc/apt/sources.list.d/google-chrome.list
-            sudo apt-get update
-            sudo apt-get install -y google-chrome-stable
-        
-            # Ambil versi Chrome
-            CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' | head -1)
-            echo "Detected Chrome version: $CHROME_VERSION"
-        
-            # Download ChromeDriver yang sesuai
-            API_URL="https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json"
-            CHROMEDRIVER_URL=$(curl -sS $API_URL | jq -r --arg ver "$CHROME_VERSION" '.versions[] | select(.version | startswith($ver)) | .downloads.chromedriver[] | select(.platform=="linux64") | .url' | head -1)
-        
-            if [ -z "$CHROMEDRIVER_URL" ]; then
-              echo "Error: Tidak ditemukan ChromeDriver yang cocok!"
-              exit 1
-            fi
-        
-            echo "Downloading ChromeDriver from: $CHROMEDRIVER_URL"
-            curl -Lo chromedriver.zip "$CHROMEDRIVER_URL"
-            unzip chromedriver.zip
-            sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
-            sudo chmod +x /usr/local/bin/chromedriver
-            rm -rf chromedriver.zip chromedriver-linux64
-        
+          sudo apt-get update
+          sudo apt-get install -y wget jq unzip
+
+          # Get latest stable Chrome version for Linux
+          CHROME_VERSION=$(curl -s https://omahaproxy.appspot.com/all.json | jq -r '.[] | select(.os=="linux") | .versions[] | select(.channel=="stable") | .version')
+          echo "Using Chrome version: $CHROME_VERSION"
+
+          # Install Chrome
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
+          # Extract 3-part version for ChromeDriver lookup
+          CHROMEDRIVER_VERSION=$(echo $CHROME_VERSION | cut -d '.' -f 1-3)
+          echo "Matching ChromeDriver version: $CHROMEDRIVER_VERSION"
+
+          # Get ChromeDriver download URL
+          DRIVER_JSON=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json")
+          CHROMEDRIVER_URL=$(echo "$DRIVER_JSON" | jq -r --arg ver "$CHROMEDRIVER_VERSION" '.versions[] | select(.version | startswith($ver)) | .downloads.chromedriver[] | select(.platform == "linux64") | .url' | head -n 1)
+
+          echo "Downloading ChromeDriver from: $CHROMEDRIVER_URL"
+          curl -Lo chromedriver.zip "$CHROMEDRIVER_URL"
+          unzip chromedriver.zip
+          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+          rm -rf chromedriver.zip chromedriver-linux64
+
       - name: Check Chrome & ChromeDriver version
         run: |
           which google-chrome
