--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,28 +23,31 @@ jobs:
 
       - name: Install Chrome & ChromeDriver (exact version match)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y wget jq unzip
-
-          # Get latest stable Chrome version for Linux from chromiumdash
-          DRIVER_JSON=$(curl -s "https://chromiumdash.appspot.com/fetch_stable?os=Linux")
-          CHROME_VERSION=$(echo "$DRIVER_JSON" | jq -r '.version')
-          echo "Using Chrome version: $CHROME_VERSION"
-
-          # Extract 3-part version for ChromeDriver lookup
-          CHROMEDRIVER_VERSION=$(echo $CHROME_VERSION | cut -d '.' -f 1-3)
-          echo "Matching ChromeDriver version: $CHROMEDRIVER_VERSION"
-
-          # Get ChromeDriver download URL from chrome-for-testing API
-          DRIVER_JSON_CFT=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json")
-          CHROMEDRIVER_URL=$(echo "$DRIVER_JSON_CFT" | jq -r --arg ver "$CHROMEDRIVER_VERSION" '.versions[] | select(.version | startswith($ver)) | .downloads.chromedriver[] | select(.platform == "linux64") | .url' | head -n 1)
-
-          echo "Downloading ChromeDriver from: $CHROMEDRIVER_URL"
-          curl -Lo chromedriver.zip "$CHROMEDRIVER_URL"
-          unzip chromedriver.zip
-          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-          rm -rf chromedriver.zip chromedriver-linux64
+            sudo apt-get update
+            sudo apt-get install -y wget jq unzip
+  
+            # Get latest stable Chrome version for Linux from chromiumdash
+            DRIVER_JSON=$(curl -s "https://chromiumdash.appspot.com/fetch_stable?os=Linux")
+            echo "Raw JSON Response:"
+            echo "$DRIVER_JSON" | jq
+  
+            CHROME_VERSION=$(echo "$DRIVER_JSON" | jq -r '.version')
+            echo "Using Chrome version: $CHROME_VERSION"
+  
+            # Extract 3-part version for ChromeDriver lookup
+            CHROMEDRIVER_VERSION=$(echo $CHROME_VERSION | cut -d '.' -f 1-3)
+            echo "Matching ChromeDriver version: $CHROMEDRIVER_VERSION"
+  
+            # Get ChromeDriver download URL from chrome-for-testing API
+            DRIVER_JSON_CFT=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json")
+            CHROMEDRIVER_URL=$(echo "$DRIVER_JSON_CFT" | jq -r --arg ver "$CHROMEDRIVER_VERSION" '.versions[] | select(.version | startswith($ver)) | .downloads.chromedriver[] | select(.platform == "linux64") | .url' | head -n 1)
+  
+            echo "Downloading ChromeDriver from: $CHROMEDRIVER_URL"
+            curl -Lo chromedriver.zip "$CHROMEDRIVER_URL"
+            unzip chromedriver.zip
+            sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
+            sudo chmod +x /usr/local/bin/chromedriver
+            rm -rf chromedriver.zip chromedriver-linux64
 
       - name: Check Chrome & ChromeDriver version
         run: |
