--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,43 +21,15 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Install Chrome & ChromeDriver (exact version match)
+      - name: Install Chrome (tanpa ChromeDriver manual)
         run: |
-            sudo apt-get update
-            sudo apt-get install -y wget jq unzip
-  
-            # Get latest stable Chrome version for Linux from chromiumdash
-            DRIVER_JSON=$(curl -s "https://chromiumdash.appspot.com/fetch_stable?os=Linux")
-            echo "Raw JSON Response:"
-            echo "$DRIVER_JSON" | jq
-  
-            CHROME_VERSION=$(echo "$DRIVER_JSON" | jq -r '.version')
-            echo "Using Chrome version: $CHROME_VERSION"
-  
-            # Extract 3-part version for ChromeDriver lookup
-            CHROMEDRIVER_VERSION=$(echo $CHROME_VERSION | cut -d '.' -f 1-3)
-            echo "Matching ChromeDriver version: $CHROMEDRIVER_VERSION"
-  
-            # Get ChromeDriver download URL from chrome-for-testing API
-            DRIVER_JSON_CFT=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json")
-            CHROMEDRIVER_URL=$(echo "$DRIVER_JSON_CFT" | jq -r --arg ver "$CHROMEDRIVER_VERSION" '.versions[] | select(.version | startswith($ver)) | .downloads.chromedriver[] | select(.platform == "linux64") | .url' | head -n 1)
-  
-            echo "Downloading ChromeDriver from: $CHROMEDRIVER_URL"
-            curl -Lo chromedriver.zip "$CHROMEDRIVER_URL"
-            unzip chromedriver.zip
-            sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
-            sudo chmod +x /usr/local/bin/chromedriver
-            rm -rf chromedriver.zip chromedriver-linux64
-
-      - name: Check Chrome & ChromeDriver version
-        run: |
-          which google-chrome
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          echo "Chrome installed."
           google-chrome --version
-          which chromedriver
-          chromedriver --version
 
       - name: Grant permission to execute gradlew
         run: chmod +x ./gradlew
 
       - name: Run Tests
-        run: ./gradlew test -Dchromeoptions.args="--headless=new --no-sandbox --disable-dev-shm-usage"
+        run: ./gradlew test -Dwebdriver.chrome.driver=$GITHUB_WORKSPACE/src/test/resources/driver/chromedriver -Dchromeoptions.args="--headless=new --no-sandbox --disable-dev-shm-usage"
