--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: List repository contents
+        run: |
+          echo "Listing root directory:"
+          ls -l $GITHUB_WORKSPACE
+          echo "\nListing src/ directory:"
+          ls -l $GITHUB_WORKSPACE/src
+          echo "\nListing src/test/ directory:"
+          ls -l $GITHUB_WORKSPACE/src/test
+          echo "\nListing src/test/resources/ directory:"
+          ls -l $GITHUB_WORKSPACE/src/test/resources
+          echo "\nListing src/test/resources/driver/ directory:"
+          ls -l $GITHUB_WORKSPACE/src/test/resources/driver
+
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
@@ -30,6 +43,6 @@ jobs:
 
       - name: Grant execute permission to ChromeDriver
         run: chmod +x $GITHUB_WORKSPACE/src/test/resources/driver/chromedriver
-      
+
       - name: Run Tests
         run: ./gradlew test -Dwebdriver.chrome.driver=$GITHUB_WORKSPACE/src/test/resources/driver/chromedriver -Dchromeoptions.args="--headless=new --no-sandbox --disable-dev-shm-usage"
