--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,34 +15,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: List repository contents
-        run: |
-          echo "Listing root directory:"
-          ls -l $GITHUB_WORKSPACE
-          echo "\nListing src/ directory:"
-          ls -l $GITHUB_WORKSPACE/src
-          echo "\nListing src/test/ directory:"
-          ls -l $GITHUB_WORKSPACE/src/test
-          echo "\nListing src/test/resources/ directory:"
-          ls -l $GITHUB_WORKSPACE/src/test/resources
-          echo "\nListing src/test/resources/driver/ directory:"
-          ls -l $GITHUB_WORKSPACE/src/test/resources/driver
-
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
 
-      - name: Install Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-          echo "Chrome installed."
-          google-chrome --version
+      - name: Set up Chrome and ChromeDriver
+        uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: stable  # Atau versi spesifik jika dibutuhkan
 
-      - name: Grant execute permission to ChromeDriver
-        run: chmod +x $GITHUB_WORKSPACE/src/test/resources/driver/chromedriver
+      - name: Check Chrome & ChromeDriver version
+        run: |
+          which google-chrome
+          google-chrome --version
+          which chromedriver
+          chromedriver --version
+
+      - name: Grant permission to execute gradlew
+        run: chmod +x ./gradlew
 
       - name: Run Tests
-        run: ./gradlew test -Dwebdriver.chrome.driver=$GITHUB_WORKSPACE/src/test/resources/driver/chromedriver -Dchromeoptions.args="--headless=new --no-sandbox --disable-dev-shm-usage"
+        run: ./gradlew test -Dwebdriver.chrome.driver=/usr/local/bin/chromedriver -Dchromeoptions.args="--headless=new --no-sandbox --disable-dev-shm-usage"
