--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,22 +19,14 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 17
+          java-version: 11 # Sesuaikan dengan sourceCompatibility di build.gradle
 
-      - name: Set up Chrome and ChromeDriver
-        uses: browser-actions/setup-chrome@v1
-        with:
-          chrome-version: stable
-
-      - name: Check Chrome & ChromeDriver version
+      - name: Install Chrome
         run: |
-          which google-chrome
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          echo "Chrome installed."
           google-chrome --version
-          which chromedriver
-          chromedriver --version
-
-      - name: Check PATH
-        run: echo $PATH
 
       - name: Grant permission to execute gradlew
         run: chmod +x ./gradlew
