Initial commit: update lagi-38 web and API automation framework

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,8 @@ jobs:
         with:
           chrome-version: stable
 
+      - name: Grant execute permission to gradlew
+        run: chmod +x ./gradlew
+
       - name: Run Tests
         run: ./gradlew test -Dchromeoptions.args="--headless=new --no-sandbox --disable-dev-shm-usage"
