Initial commit: update lagi-40 web and API automation framework

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,12 @@ jobs:
       - name: Grant execute permission to gradlew
         run: chmod +x ./gradlew
 
+      - name: Verify ChromeDriver
+        run: |
+          echo "Checking for ChromeDriver at /usr/local/bin:"
+          ls -l /usr/local/bin/chromedriver
+          echo "Checking permissions:"
+          file /usr/local/bin/chromedriver
+
       - name: Run Tests
         run: ./gradlew test -Dchromeoptions.args="--headless=new --no-sandbox --disable-dev-shm-usage"
