--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     // JSON Processing
     testImplementation 'org.json:json:20210307'
     testImplementation 'com.google.code.gson:gson:2.10.1'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
 }
 
 tasks.withType(Test).configureEach {
